Additional emoji support. https://bugs.webkit.org/show_bug.cgi?id=141047 rdar://problem/19045135

Reviewed by Darin Adler.

Source/WebCore:

Adds support for emoji modifiers and group emoji.

Test: editing/deleting/delete-emoji.html

* platform/graphics/FontCascade.cpp:
(WebCore::FontCascade::characterRangeCodePath):
* platform/text/TextBreakIterator.cpp:
(WebCore::cursorMovementIterator):
* rendering/RenderText.cpp:
(WebCore::isEmojiGroupCandidate):
(WebCore::isEmojiModifier):
(WebCore::RenderText::previousOffsetForBackwardDeletion):

LayoutTests:

* editing/deleting/delete-emoji.html: Added.
* editing/deleting/delete-emoji-expected.txt: Added.



Canonical link: https://commits.webkit.org/159220@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@179567 268f45cc-cd09-0410-ab3c-d52691b4dbfc